Microservices updated. Added docker build script
